--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -9,11 +9,8 @@
       <div class="enlaces">
         <ul>
           <a href="/products"><li>PRODUCTOS</li></a>
-          <li>PROMOS</li>
-          <a
-            href=""
-            target="_blank"
-          ><li>SEGUINOS</li></a>
+          <li>NOVEDADES</li>
+          <li>NOSOTROS</li>
         </ul>
       </div>
       <div>
