--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -11,8 +11,8 @@
       <div class="enlaces">
         <ul>
           <a href="/products"><li>PRODUCTOS</li></a>
-          <li>PROMOS</li>
-          <li>SEGUINOS</li>
+          <li>NOVEDADES</li>
+          <li>NOSOTROS</li>
         </ul>
       </div>
 
