--- a/src/views/purchase.handlebars
+++ b/src/views/purchase.handlebars
@@ -1,38 +1,3 @@
-{{!-- <nav class="navBar">
-  <ul>
-    <div class="Logo">
-      <a href="/"><img src="/img/sushilogo.png" alt="" /> </a>
-      <a href="/">
-        <p>SUSHIAPP</p>
-      </a>
-    </div>
-
-    <div class="divsSing">
-      <div class="enlaces">
-        <ul>
-          <a href="/products">
-            <li>PRODUCTOS</li>
-          </a>
-          <li>PROMOS</li>
-          <a href="https://www.instagram.com/agupeiretti/?hl=es" target="_blank">
-            <li>SEGUINOS</li>
-          </a>
-        </ul>
-      </div>
-      <div>
-        <a href="/cart">
-          <li><i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i></li>
-        </a>
-      </div>
-      <div class="logoutContainer">
-        <button id="loguotButton">Logout</button>
-      </div>
-
-    </div>
-
-  </ul>
-</nav> --}}
-
 <nav class="navBar">
   <ul>
     <a href="/">
@@ -51,8 +16,8 @@
           <a href="/products">
             <li>PRODUCTOS</li>
           </a>
-          <li>PROMOS</li>
-          <li>SEGUINOS</li>
+          <li>NOVEDADES</li>
+          <li>NOSOTROS</li>
         </ul>
       </div>
 
@@ -83,7 +48,7 @@
         <div class="parteInfo">
           <p class="userName" data-user-id={{user.email}}>Nombre: {{user.name}} </p>
           <p>Email: {{user.email}}</p>
-          <p>Direccion: calle xxx numero xxx</p>
+          <p>Direccion: Aqui va la dirección</p>
         </div>
         <div class="parteProductos" data-products={{carts.products}}>
           <div class="parteProductosContenido">
