--- a/src/views/thanks.handlebars
+++ b/src/views/thanks.handlebars
@@ -16,8 +16,8 @@
           <a href="/products">
             <li>PRODUCTOS</li>
           </a>
-          <li>PROMOS</li>
-          <li>SEGUINOS</li>
+          <li>NOVEDADES</li>
+          <li>NOSOTROS</li>
         </ul>
       </div>
 
