--- a/src/public/css/chat.css
+++ b/src/public/css/chat.css
@@ -4,30 +4,21 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgb(38, 38, 38);
-  color: #e7832b;
-  justify-content: center;
-  overflow-x: hidden;
-}
 .chatWindow {
   width: 100vw;
   height: 100vh;
-  background-color: rgb(27, 27, 27);
+  background-color: white;
 }
 .title {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #e7832b;
+  color: #634133;
   padding-top: 30px;
 }
 .messages {
-  color: white;
+  color: black;
   margin-left: 30px;
   padding-top: 30px;
 }
@@ -46,13 +37,15 @@ body {
   height: 30px;
   border-radius: 40px;
   text-indent: 30px;
+  border: 2px solid #634133;
 }
 .botonEnviar button {
   background-color: transparent;
-  border: 2px solid #e7832b;
+  border: 2px solid #634133;
   width: 100px;
   height: 30px;
   border-radius: 40px;
-  color: white;
+  color: #634133;
+  font-weight: bolder;
   margin-left: 30px;
 }
