--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -11,7 +11,7 @@ body {
   background-color: white;
 }
 
-.navBar p{
+/* .navBar p{
   margin-bottom: 0;
 }
 
@@ -51,7 +51,7 @@ body {
   color: white;
   cursor: pointer;
 }
-
+ */
 h1 {
   color: #50332e;
   margin-top: 80px;
