--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -12,7 +12,7 @@
       <div class="enlaces">
         <ul>
           <a href="/products"><li>PRODUCTOS</li></a>
-          <li>NOVEDADES</li>
+          <a href="/manager"><li>MANAGER</li></a>
           <li>NOSOTROS</li>
         </ul>
       </div>
