--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -9,7 +9,8 @@
       <div class="enlaces">
         <ul>
           <a href="/products"><li>PRODUCTOS</li></a>
-          <li>NOVEDADES</li>
+          <a href="/manager"><li>MANAGER</li></a>
+          <a href="/premium"><li>HASTE PREMIUM</li></a>
           <li>NOSOTROS</li>
         </ul>
       </div>
