--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -20,9 +20,14 @@
           class="fa-brands fa-github"
           style="color: #000000;"
         ></i></a>
-    </div>
-    <P>¿Olvidaste tu Contraseña?</p>
-  <a href="/restorePassword" class="restorePass">Restablecela aqui</a></P>
+  </div>
+<div>
+  <p>No estas registrado?</p>
+  <a href="/register"><button class="registerBtn">Registrarme!</button></a>
+</div>
+
+  <P>¿Olvidaste tu Contraseña?
+  <a href="/restoreRequest" class="restorePass">Restablecela aqui!</a></P>
 
 </div>
 
