--- a/src/views/purchase.handlebars
+++ b/src/views/purchase.handlebars
@@ -13,10 +13,8 @@
 
       <div class="enlaces">
         <ul>
-          <a href="/products">
-            <li>PRODUCTOS</li>
-          </a>
-          <li>NOVEDADES</li>
+          <a href="/products"><li>PRODUCTOS</li></a>
+          <a href="/premium"><li>HASTE PREMIUM</li></a>
           <li>NOSOTROS</li>
         </ul>
       </div>
