--- a/src/views/restorePassword.handlebars
+++ b/src/views/restorePassword.handlebars
@@ -1,16 +1,17 @@
-<div>
+<div class="restorePasswordDiv">
   <h1>Restrablecer contraseña</h1>
 
-  <form action="" id="restoreForm">
-    <label for="">Ingresa tu correo</label>
-    <input name="email" type="email" />
+  <form action="" id="restorePasswordForm">
+    {{!-- <label for="">Ingresa tu correo</label>
+    <input name="email" type="email" /> --}}
 
     <label for="">Ingresa tu nueva contraseña</label>
     <input name="password" type="password" />
 
-    <input type="submit" />
+    <button type="submit">Enviar</button>
 
   </form>
+  <p id="message"></p>
 </div>
 
 <script src="/js/restorePassword.js "></script>
