--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -54,6 +54,10 @@
   border-radius: inherit;
 }
 
+.navBar p{
+  margin-bottom: 0;
+}
+
 .navBar ul {
   width: 100%;
   height: 100%;
@@ -95,4 +99,41 @@ a {
 
 a:hover {
   color:rgb(207, 207, 207);
+}
+
+.saludo {
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-right: 15px;
+}
+
+.saludo h1{
+  margin-top: 5px;
+  color: white;
+  font-size: 15px;
+}
+
+.saludo p {
+  color: white;
+  font-size: 12px;
+}
+
+.logoutContainer {
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logoutContainer button {
+  background-color: transparent;
+  border: 2px solid #e5005a;
+  width: 100px;
+  height: 30px;
+  border-radius: 40px;
+  color: white;
+  cursor: pointer;
 }
