--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -15,7 +15,7 @@ body {
   margin-bottom: 0;
 }
 
-.logoutContainer {
+/* .logoutContainer {
   font-size: 10px;
   display: flex;
   flex-direction: column;
@@ -31,7 +31,7 @@ body {
   border-radius: 40px;
   color: white;
   cursor: pointer;
-}
+} */
 
 #cartContainer{
   margin-top: 5em;
