--- a/src/views/hastePremium.handlebars
+++ b/src/views/hastePremium.handlebars
@@ -37,7 +37,7 @@
 
 <div class="premiumContainer">
 
-  <h1>Haste premium</h1>
+  <h1>Cambiar de perfil</h1>
   <div class="premiumDiv">
 
       <button onclick="premiumHandler('premium')">Perfil Premium</button>
