--- a/src/views/manager.handlebars
+++ b/src/views/manager.handlebars
@@ -8,7 +8,9 @@
     <div class="divsSing">
       <div class="enlaces">
         <ul>
-          <a href="/"><li>MANAGER</li></a>
+          <a href="/products"><li>PRODUCTOS</li></a>
+          <a href="/manager"><li>MANAGER</li></a>
+          <a href="/premium"><li>PREMIUM</li></a>
           <a href="/"><li>HOME</li></a>
 
           <div class="logoutContainer">
