--- a/src/views/purchase.handlebars
+++ b/src/views/purchase.handlebars
@@ -14,7 +14,7 @@
       <div class="enlaces">
         <ul>
           <a href="/products"><li>PRODUCTOS</li></a>
-          <a href="/premium"><li>HASTE PREMIUM</li></a>
+          <a href="/premium"><li>PREMIUM</li></a>
           <li>NOSOTROS</li>
         </ul>
       </div>
