--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -10,7 +10,7 @@
         <ul>
           <a href="/products"><li>PRODUCTOS</li></a>
           <a href="/manager"><li>MANAGER</li></a>
-          <a href="/premium"><li>HASTE PREMIUM</li></a>
+          <a href="/premium"><li>PREMIUM</li></a>
           <li>NOSOTROS</li>
         </ul>
       </div>
