--- a/src/templates/restore.handlebars
+++ b/src/templates/restore.handlebars
@@ -1,10 +1,10 @@
 <div>
     <h1 style="color: #50332e; text-aling:center;">
-        Restablece tu clave
+        Restablecer contraseña!
     </h1>
     
-    <h2>Este correo te permitira poner una nueva contraseña</h2>
+    <h2>Recibiste este correo por que olvidaste tu contraseña, si no es asi, desestimalo! </h2>
     <p>
-        puedes restablecer tu contraseña <a href="http://localhost:8080/restorePassword?token={{restoreToken}}">en este enlace</a>
+        Para restablecer tu contraseña, por favor haz clic <a href="http://localhost:8080/restorePassword?token={{restoreToken}}">en este enlace</a>
     </p>
 </div>
