--- a/src/views/managerPremium.handlebars
+++ b/src/views/managerPremium.handlebars
@@ -9,9 +9,7 @@
       <div class="enlaces">
         <ul>
           <a href="/products"><li>PRODUCTOS</li></a>
-          <a href="/manager"><li>Manager Productos</li></a>
-          {{!-- <a href="/userManager"><li>Users Manager</li></a> --}}
-          <a href="/premium"><li>PREMIUM</li></a>
+          {{!-- <a href="/managerPremium"><li>Manager Productos</li></a> --}}
           <a href="/"><li>HOME</li></a>
 
           <div class="logoutContainer">
