Enviar ticket de compra funcionando

--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -6,8 +6,7 @@
   <ul>
     <a href="/products"><li>Manager Productos</li></a>
     <li>Manager Carritos</li>
-    <a href=""><li
-      >Manager Tickets</li></a>
+    <a href="/" target="_blank"><li>Manager Tickets</li></a>
 
   <div class="logoutContainer">
     <button id="loguotButton">Logout</button>
