--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -13,6 +13,7 @@
         <ul>
           <a href="/products"><li>PRODUCTOS</li></a>
           <a href="/manager"><li>MANAGER</li></a>
+          <a href="/premium"><li>PREMIUM</li></a>
           <li>NOSOTROS</li>
         </ul>
       </div>
