--- a/src/views/purchase.handlebars
+++ b/src/views/purchase.handlebars
@@ -46,7 +46,7 @@
         <div class="parteInfo">
           <p class="userName" data-user-id={{user.email}}>Nombre: {{user.name}} </p>
           <p>Email: {{user.email}}</p>
-          <p>Direccion: Aqui va la dirección</p>
+          <p>Direccion:</p>
         </div>
         <div class="parteProductos" data-products={{carts.products}}>
           <div class="parteProductosContenido">
