--- a/src/views/userManager.handlebars
+++ b/src/views/userManager.handlebars
@@ -1,8 +1,8 @@
 <nav class="navBar">
   <ul>
     <div class="Logo">
-      <a href="/"><img src="/img/alma.png" alt="" /> </a>
-      <a href="/"> <p>INCIENSE</p></a>
+      <a href="#"><img src="/img/alma.png" alt="" /> </a>
+      <a href="#"> <p>INCIENSE</p></a>
     </div>
 
     <div class="divsSing">
