--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="loginContainer">
-
-  <h1>Login</h1>
+<h1>Ecomerce - Alma insensos!</h1>
+  <h2>Login</h2>
   <div class="loginDiv">
     <form id="loginForm">
 
