--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,6 +1,6 @@
 <div class="registerContainer">
-
-  <h1>Regístrate</h1>
+<h1>Ecomerce - Alma inciensos</h1>
+  <h2>Regístrate</h2>
   <div class="formDiv">
     <form id="registerForm">
 
